--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             </div>
             <div class="p-card">
                 <div class="pic">
-                    <img src="images/project-All.jpg">
+                    <img src="images/eco.jpg">
                 </div>
                 <div class="p-info">
-                    <p class="p-text">The "ALL FACTURE" project centralized billing data from multiple projects, generating customized reports for informed financial decisions by the Cheikh Zaid Foundation.</p>
+                    <p class="p-text">The E-Website is a digital platform for businesses to sell products online, offering convenience, global reach, and secure transactions.</p>
                     <strong class="p-title">
-                        <span>ALL FACTURE</span>
+                        <span>E-Website</span>
                         <a href="#" class="more-details">More details</a>
                     </strong>
                 </div>
