--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
             </div>
             <div class="p-card">
                 <div class="pic">
-                    <img src="images/project-All.jpg">
+                    <img src="images/Tic.jpg">
                 </div>
                 <div class="p-info">
-                    <p class="p-text">The "ALL FACTURE" project centralized billing data from multiple projects, generating customized reports for informed financial decisions by the Cheikh Zaid Foundation.</p>
+                    <p class="p-text">Using Python, I created a Tic-Tac-Toe game where players take turns placing X or O marks on a 3x3 grid. The game utilizes data structures, loops, conditional statements, and user input for an interactive gaming experience. Python's simplicity and versatility allowed me to develop an engaging rendition of this timeless game.</p>
                     <strong class="p-title">
-                        <span>ALL FACTURE</span>
+                        <span>Tic Tac Toe</span>
                         <a href="#" class="more-details">More details</a>
                     </strong>
                 </div>
