--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3>
                 " Let's work together "
             </h3>
-            <a href="LEGDANI_Raid (En).pdf" class="main-btn" download target="_blank">Download CV</a>
+            <a href="Raid_CV.pdf" class="main-btn" download target="_blank">Download CV</a>
             <div class="social-btn">
                 <a href="https://www.linkedin.com/in/raid-legdani-249024239" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.facebook.com/raid.lagdani?locale=fr_FR" target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -99,7 +99,7 @@
             </div>
             <div class="p-card">
                 <div class="pic">
-                    <img src="images/Tic.jpg">
+                    <img src="images/Toc.jpg">
                 </div>
                 <div class="p-info">
                     <p class="p-text">Using Python, I created a Tic-Tac-Toe game where players take turns placing X or O marks on a 3x3 grid. The game utilizes data structures, loops, conditional statements, and user input for an interactive gaming experience. Python's simplicity and versatility allowed me to develop an engaging rendition of this timeless game.</p>
