--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             </div>
             <div class="p-card">
                 <div class="pic">
-                    <img src="images/Toc.jpg">
+                    <img src="images/Tocc.jpg">
                 </div>
                 <div class="p-info">
-                    <p class="p-text">Using Python, I created a Tic-Tac-Toe game where players take turns placing X or O marks on a 3x3 grid. The game utilizes data structures, loops, conditional statements, and user input for an interactive gaming experience. Python's simplicity and versatility allowed me to develop an engaging rendition of this timeless game.</p>
+                    <p class="p-text">I created a Python Tic-Tac-Toe game with a 3x3 grid. It uses data structures, loops, conditionals, and user input for an interactive experience. Python's simplicity and versatility made it perfect for developing this engaging game.</p>
                     <strong class="p-title">
                         <span>Tic Tac Toe</span>
                         <a href="#" class="more-details">More details</a>
