--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3>
                 " Let's work together "
             </h3>
-            <a href="Raid_CV.pdf" class="main-btn" download target="_blank">Download CV</a>
+            <a href="Raid_legdani_CV.pdf" class="main-btn" download target="_blank">Download CV</a>
             <div class="social-btn">
                 <a href="https://www.linkedin.com/in/raid-legdani-249024239" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.facebook.com/raid.lagdani?locale=fr_FR" target="_blank"><i class="fa-brands fa-facebook"></i></a>
