--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raid Legdanil - BI Engineer & Data Analyst</title>
+    <title>Raid LEGDANI - BI Engineer & Data Analyst</title>
     <style>
         * {
             margin: 0;
@@ -872,9 +872,3 @@
                     </div>
                 </div>
 
-                <div class="project-card">
-                    <div class="project-image">📱</div>
-                    <div class="project-content">
-                        <h3 class="project-title">University Management Mobile App</h3>
-                        <p class="project-description">
-                            Developed a mobile application to
