--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-subtitle">Hello, I'm</div>
-            <h1>Raid Legdanil</h1>
+            <h1>Raid LEGDANI</h1>
             <p class="hero-description">
                 BI Engineer & Data Analyst transforming raw data into strategic business insights. 
                 Passionate about creating automated solutions that drive decision-making.
@@ -873,18 +873,23 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-image">📱</div>
+                    <div class="project-image">🖥️</div>
                     <div class="project-content">
-                        <h3 class="project-title">University Management Mobile App</h3>
+                        <h3 class="project-title">Interactive Data Insights Web App</h3>
                         <p class="project-description">
-                            Developed a mobile application to facilitate interactions between students and university administration, 
-                            featuring real-time notifications, grade tracking, and administrative workflow automation.
+                            Built a Streamlit-based web application to visualize and analyze large datasets in real time.
+                            The app includes dynamic filters, interactive charts, 
+                            and automated data updates, allowing users to explore trends, 
+                            correlations, and KPIs directly in their browser without complex setup.
+
+
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Mobile Development</span>
-                            <span class="tech-tag">API Integration</span>
-                            <span class="tech-tag">Database Design</span>
-                            <span class="tech-tag">UI/UX</span>
+                            <span class="tech-tag">Python </span>
+                            <span class="tech-tag">Streamlit</span>
+                            <span class="tech-tag">Pandas </span>
+                            <span class="tech-tag">Matplotlib/Seaborn</span>
+                            <span class="tech-tag">SQL Integration</span>
                         </div>
                     </div>
                 </div>
@@ -981,7 +986,7 @@
                 <div class="contact-item">
                     <span class="contact-icon">📧</span>
                     <div class="contact-label">Email</div>
-                    <div class="contact-value">Raid.legdanil@gmail.com</div>
+                    <div class="contact-value">Raid.legdani@gmail.com</div>
                 </div>
 
                 <div class="contact-item">
